...
            ToolbarItem(placement: .topBarTrailing) {
                Button {
                    withAnimation {
                        viewModel.addMovieToFavorite(movieData: movie)
                    }
                } label: {
                    Image(systemName: viewModel.isMovieFavorited ? "heart.fill" : "heart")
                        .foregroundColor(viewModel.isMovieFavorited ? .red : .white)
                }
                .accessibilityIdentifier("favoriteButton")
            }
        }
    }
}

#Preview {
...
