...
                    .frame(width: 80, height: 120)
            }
            
            VStack(alignment: .leading, spacing: 8) {
                Text(movie.title)
                    .font(.title3)
                    .accessibilityIdentifier("movieTitleLabel")
                
                Text("Release Date: \(movie.releaseDate)")
                    .font(.caption)   
            }
        }
    }
...
